--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # ---------------------------------------------------------------
 
 # Site
-title: ScuPharmacyICU
-subtitle: 四川大学华西药学院行政不作为、学术不端重症监护室
+title: Test
+subtitle: 
 description:
 author: ScuPharmacyICU
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
