--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: SCU Pharmacy ICU
-subtitle: 华西药学院行政学术不作为--重症监护室
+subtitle: 
 description:
 author: ScuPharmacyICU
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
